Hem posat els permisos

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,5 +17,7 @@
             </intent-filter>
         </activity>
     </application>
+    <uses-permissions android:name="Internet"/>
+
 
 </manifest>
