Afegeixo Permisos correctes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
             </intent-filter>
         </activity>
     </application>
-    <uses-permissions android:name="Internet"/>
+    <uses-permissions android:name="android.permission.INTERNET"/>
 
 
 </manifest>
